# metaplex

./: Cargo.toml  README-NFT-DEPLOY.md  README.md  deploy-nft.js  package-lock.json  package.json
clients/js/: package-lock.json  package.json
configs/: shank.cjs  validator.cjs
idls/: mpl_core.json
programs/mpl-core/: Cargo.toml
programs/mpl-core/src/: lib.rs
